--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-ktor_version=2.3.11
-kotlin_version=2.0.0
-logback_version=1.4.14
+ktorVersion=2.3.11
+kotlinVersion=2.0.0
+logbackVersion=1.5.13
 kotlin.code.style=official
